--- a/styles/style.css
+++ b/styles/style.css
@@ -11,6 +11,20 @@ body {
   background-color: #f5f5dc;
 }
 
+img {
+  max-width: 100%;
+  display: block;
+}
+
+h1, h2, h3 {
+  color: #008000;
+}
+
+a {
+  text-decoration: none;
+  color: #000;
+}
+
 /* Header */
 .header {
   background-color: #008000;
