--- a/styles/style.css
+++ b/styles/style.css
@@ -68,7 +68,7 @@ a {
 .nav-links a:hover {
   color: #000;
   padding: 10px;
-  background-color: #76b947;
+  background-color: #1b5e20;
   border-radius: 5px;
 }
 
@@ -114,4 +114,21 @@ section {
 .cta-btn:hover {
   background: #1b5e20;
   color: white;
+}
+
+/* about section */
+.grid {
+  display: flex;
+  gap: 2rem;
+  flex-wrap: wrap;
+  margin-top: 20px;
+}
+
+.feature {
+  flex: 1;
+  min-width: 250px;
+  background: #fff;
+  padding: 1rem;
+  border-radius: 8px;
+  box-shadow: 0 1px 5px rgba(0,0,0,0.1);
 }
