--- a/styles/style.css
+++ b/styles/style.css
@@ -141,7 +141,6 @@ section {
 .ingredients {
     padding: 3rem 2rem;
     background-color: #fff;
-    text-align: center;
 }
 
 .ingredients-grid {
@@ -157,6 +156,21 @@ section {
     width: 300px; 
     height: 200px; 
     overflow: hidden; 
+}
+
+.slideshow-image {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    left: 0;
+    opacity: 0;
+    height: 100%;    
+    transition: opacity 1s ease-in-out; 
+}
+
+/* Show the active image */
+.slideshow-image.active {
+    opacity: 1; 
 }
 
 .ingredients-list {
