--- a/styles/style.css
+++ b/styles/style.css
@@ -187,3 +187,23 @@ section {
 .ingredients-list li {
     margin-bottom: 1rem;
 }
+
+/* Testimonials */
+.testimonials {
+    padding: 3rem 2rem;
+}
+
+.testimonial-grid {
+    display: grid;
+    margin-top: 2rem;
+    gap: 3rem;
+    grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+}
+
+.quote {
+    background-color: #fff;
+    padding: 1rem;
+    border-radius: 10px;
+    font-style: italic;
+    box-shadow: 0 2px 6px rgba(0, 0, 0, 0.1);    
+}
