--- a/styles/style.css
+++ b/styles/style.css
@@ -11,13 +11,14 @@ body {
   background-color: #f5f5dc;
 }
 
-img {
-  max-width: 100%;
-  display: block;
-}
-
 h1, h2, h3 {
   color: #008000;
+}
+
+img {
+  display: block;
+  height: 600px;
+  width: 100%;
 }
 
 a {
@@ -322,7 +323,7 @@ section {
 
   .menu-toggle {
     display: block;
-    background: url('menu-icon.svg') no-repeat center;
+    background: url('https://fontawesome.com/icons/bars?f=classic&s=solid') no-repeat center;
     cursor: pointer;
     width: 30px;
     height: 30px;
